[package]
name = "columnrs"
version = "0.1.1"
authors = ["wkevin <wkevin27@gmail.com>"]
edition = "2021"
description = "A command-line tool for formatting tabular data into columns table"
license = "MIT"
repository = "https://github.com/wkevin/columnrs"
readme = "README.md"
keywords = ["cli", "formatting", "column", "tabular"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.2"
